 
	
   [*] Changes that are 100% compatible with existing client code.  
  [**] Changes that requiring little or no modification to existing
       client code. 
 [***] Changes requiring important modifications to existing client code.

 ??, 2001
 
 - Release of version 1.2 (ALPHA)

 - The src/java/org/apache/log4j/examples/ directory moved under the
   top-level directory as examples/. [*]

 - Improved error reporting in DOMConfigurator. Thanks to Thomas Tuft
   Muller for contributing the enhancement. [*]
	
 - Log4j is now configurable using JMX. JMX support is not of
   production quality. [*]

 - Added support for different encodings in WriterAppender. Thanks to
   Ben Sandee for submitting the relevant patch. [*]

 - Modified SMTPAppender to allow multiple email sessions. Thanks to
   Jon Skeet for supplying the relevant patch. [*]

 - The CategoryFactory class has been replaced by the LoggerFactory
   class. The makeNewCategoryInstance method has been renamed as
   makeNewLoggerInstance. This change requires subclasses of Category
   classes to be modified and recompiled. [**]

 - The Level class replaced the Priority class. Priority class now
   extends Level to preserve backward compatibility. [*]

 - The Logger class replaced the Category class. Logger class 
   extends Category to preserve backward compatibility. We proudly
   mark this change with a single star for 100% compatibility. [*]

 - The Category.assert method has been replaced by
   Category.assertLog.  This change was necessary because assert is a
   language reserved word in JDK 1.4. [*/**]

 - Removed deprecated methods setOptions and getOptionStrings defined
   in the org.apache.log4j.spi.OptionHandler interface. This interface
   is implemented by most log4j appenders and layouts. In particular,
   all appenders and layouts shipped with log4j contain these
   deprecated methods. They have become totally redundant after we
   moved to JavaBeans style configuration in log4j 1.1. [**]
