@@ -45,7 +45,7 @@
 </li>
                     <li>    <a href="./documentation.html">Documentation</a>
 </li>
-                    <li>    <a href="./srtw.html">Comments on JSR47</a>
+                    <li>    <a href="http://jakarta.apache.org/log4j/docs/srtw.html">Comments on JSR47</a>
 </li>
                     <li>    <a href="./contactUs.html">Contact us</a>
 </li>
@@ -101,13 +101,13 @@
                                                 <table border="0" cellspacing="0" cellpadding="2" width="100%">
       <tr><td bgcolor="#525D76">
         <font color="#ffffff" face="arial,helvetica,sanserif">
-          <a name="log4j version 1.2 alpha6"><strong>log4j version 1.2 alpha6</strong></a>
+          <a name="log4j version 1.2 alpha7"><strong>log4j version 1.2 alpha7</strong></a>
         </font>
       </td></tr>
       <tr><td>
         <blockquote>
-                                    <p>An alpha version of log4j 1.2 is now available in in <a href="../jakarta-log4j-1.2alpha6.tar.gz"><b>TAR.GZ</b></a>
-	format or in <a href="../jakarta-log4j-1.2alpha6.zip"><b>ZIP</b></a> format.
+                                    <p>An alpha version of log4j 1.2 is now available in in <a href="../jakarta-log4j-1.2alpha7.tar.gz"><b>TAR.GZ</b></a>
+	format or in <a href="../jakarta-log4j-1.2alpha7.zip"><b>ZIP</b></a> format.
       </p>
                                                 <p>Log4j version 1.2 is still in alpha stage. It is not
 	feature-complete, still requries fair amount of testing, nor
