@@ -45,7 +45,7 @@
 </li>
                     <li>    <a href="./documentation.html">Documentation</a>
 </li>
-                    <li>    <a href="./srtw.html">Comments on JSR47</a>
+                    <li>    <a href="http://jakarta.apache.org/log4j/docs/srtw.html">Comments on JSR47</a>
 </li>
                     <li>    <a href="./contactUs.html">Contact us</a>
 </li>
