@@ -11,7 +11,7 @@
       <item name="Introduction"   href="/index.html"/>
       <item name="Download"       href="/download.html"/>
       <item name="Documentation"  href="/documentation.html"/>
-      <item name="Comments on JSR47"   href="/srtw.html"/>
+      <item name="Comments on JSR47" href="http://jakarta.apache.org/log4j/docs/srtw.html"/>
       <item name="Contact us"     href="/contactUs.html"/>
       <item name="Contributors"   href="/contributors.html"/>
       <item name="History"        href="/history.html"/>
